# src/common/configs/swagger-output.json
@@ -357,6 +357,9 @@
             "schema": {
               "type": "object",
               "properties": {
+                "fullname": {
+                  "example": "any"
+                },
                 "email": {
                   "example": "any"
                 },
@@ -409,6 +412,32 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/auth/verify-email": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "token",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
