# src/modules/user/user.model.js
@@ -3,14 +3,33 @@ import bcrypt from "bcryptjs";
 
 const userSchema = new mongoose.Schema(
   {
+    fullname: { type: String, required: true },
     email: { type: String, required: true, unique: true },
     password: { type: String, required: true },
-    role: { type: String, enum: ["member", "admin"], default: "member" },
+
+    role: {
+      type: String,
+      enum: ["member", "admin", "manager", "superAdmin"],
+      default: "member",
+    },
+
+    // Xác minh email
+    isVerifyEmail: { type: Boolean, default: false },
+    emailVerifyToken: { type: String },
+
+    // Xác minh số điện thoại (nếu cần sau này)
+    isVerifyPhoneNumber: { type: Boolean, default: false },
+
+    // 2 bước xác minh (nếu cần)
+    is2StepVerify: { type: Boolean, default: false },
+
+    lastestLogin: { type: Date, default: null },
+
+    isActive: { type: Boolean, default: true },
   },
   { timestamps: true }
 );
 
-// Mã hóa mật khẩu trước khi lưu
 userSchema.pre("save", async function (next) {
   if (!this.isModified("password")) return next();
   const salt = await bcrypt.genSalt(10);
@@ -18,11 +37,9 @@ userSchema.pre("save", async function (next) {
   next();
 });
 
-// So sánh mật khẩu khi đăng nhập
 userSchema.methods.comparePassword = async function (inputPassword) {
   return await bcrypt.compare(inputPassword, this.password);
 };
 
 const User = mongoose.model("User", userSchema);
-
 export default User;
